@@ -10,11 +10,13 @@
 	directory="images"
 	/>
 
-  <browser:page
-      for="..interfaces.IFormOnline"
-      name="formonline_view"
-      template="formonline_view.pt"
-      permission="zope2.View"
-      />
+  <browser:viewlet
+     name="auslfe.formonline.content.workflowinfos"
+     for="..interfaces.IFormOnline"
+     view="plone.app.layout.globals.interfaces.IViewView"
+     manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+     permission="zope2.View"
+     class=".viewlet.WorkflowInfoViewlet"
+     />  
 
 </configure>
