@@ -1,70 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="auslfe.formonline.content">
-<body>
-
-<metal:main fill-slot="main">
-    <tal:main-macro metal:define-macro="main"
-           tal:define="text here/getText;
-		               wtool python:context.portal_workflow;
-		               context_state python:wtool.getInfoFor(context, 'review_state');
-					   ">
-
-        <div tal:replace="structure provider:plone.abovecontenttitle" />
-
-        <h1 class="documentFirstHeading"> 
-            <metal:field use-macro="python:here.widget('title', mode='view')">
-            Title
-            </metal:field>
-        </h1>
-
-        <div tal:replace="structure provider:plone.belowcontenttitle" />
-
-		<dl class="portalMessage" tal:condition="python:context_state=='private'">
-			<dt i18n:translate="">Note</dt>
-			<dd i18n:translate="private_msg">
-				The form has not been submitted yet.
-			</dd>
-		</dl>
-		<dl class="portalMessage" tal:condition="python:context_state=='pending_approval'">
-			<dt i18n:translate="">Note</dt>
-			<dd i18n:translate="pending_approval">
-				Overseer has not approved this form yet.
-			</dd>
-		</dl>
-		<dl class="portalMessage" tal:condition="python:context_state=='pending_dispatch'">
-			<dt i18n:translate="">Note</dt>
-			<dd i18n:translate="pending_dispatch">
-				This activity has not been confirmed yet.
-			</dd>
-		</dl>
-
-        <div tal:replace="structure provider:plone.abovecontentbody" />
-
-        <p tal:condition="python: not text and is_editable"
-           i18n:translate="no_body_text"
-		   i18n:domain="plone"
-           class="discreet">
-            This item does not have any body text, click the edit tab to change it.
-        </p>
-
-        <metal:field use-macro="python:here.widget('text', mode='view')">
-        Body text
-        </metal:field>
-
-        <div metal:use-macro="here/document_relateditems/macros/relatedItems">
-            show related items if they exist
-        </div>
-    
-        <div tal:replace="structure provider:plone.belowcontentbody" />
-
-    </tal:main-macro>
-</metal:main>
-
-</body>
-</html>
-
