@@ -8,16 +8,21 @@
   <five:registerPackage package="." initialize=".initialize" />
   <i18n:registerTranslations directory="locales" />
 
-  <!-- Include the sub-packages that use their own configure.zcml files. -->
   <include package=".browser" />
   <include package=".content" />
   
-  <!-- Register the installation GenericSetup extension profile -->
   <genericsetup:registerProfile
       name="default"
       title="Form Online: Content"
       directory="profiles/default"
-      description="Base content for the use of forms online"
+      description="Base content support for the use of forms online"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+  <genericsetup:registerProfile
+      name="withtypes"
+      title="Form Online: include FormOnline type"
+      directory="profiles/withtypes"
+      description="Include the FormOnline content for usage of forms online"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
   
