@@ -3,9 +3,8 @@
   <import-step
      id="formonline-document-versioning"
      version="20110503-01"
-     handler="auslfe.formonline.content.setuphandlers.setVersionedTypes"
-     title="auslfe.formonline.content: Versioning">
-         Setup handler to put under version control the specified portal types
-     <dependency step="typeinfo"/>
+     handler="auslfe.formonline.content.setuphandlers.setupVarious"
+     title="auslfe.formonline.content: various">
+         Setup handler for various actions
   </import-step>
 </import-steps>
