@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>1000</version>
+  <dependencies>
+    <dependency>profile-auslfe.formonline.content:default</dependency>
+  </dependencies>
+</metadata>
