@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<object name="portal_properties">
+
+ <object name="site_properties" meta_type="Plone Property Sheet">
+  <property name="types_not_searched" type="lines" purge="False">
+    <element value="FormOnline"/>
+  </property>
+ </object>
+
+ <object name="navtree_properties">
+   <property name="metaTypesNotToList" type="lines" purge="False">
+    <element value="FormOnline"/>
+   </property>
+ </object>
+
+</object>
