@@ -13,9 +13,9 @@
   <property name="global_allow">True</property>
   <property name="filter_content_types">False</property>
   <property name="allow_discussion">False</property>
-  <property name="default_view">formonline_view</property>
+  <property name="default_view">document_view</property>
   <property name="view_methods">
-    <element value="formonline_view" />
+    <element value="document_view" />
   </property>
   <alias from="(Default)" to="(dynamic view)" />
   <alias from="edit" to="atct_edit" />
