@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_workflow">
+ <bindings>
+  <type type_id="FormOnline">
+   <bound-workflow workflow_id="formonline_workflow"/>
+  </type>
+ </bindings>
+</object>
